Fix Scrollbar Behavior Issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,10 +7,6 @@
   --font-quantico: 'Quantico', sans-serif;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   padding: 0 0;
   margin: 0 0;
